<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/app_title"
            android:textColor="@color/text_color_header"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="3"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                tools:ignore="NestedWeights">


                <LinearLayout
                    android:id="@+id/temp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/card_background"
                        android:padding="25dp"
                        android:src="@drawable/temp_icon"
                        app:tint="#fff"
                        android:contentDescription="@string/temp_image" />

                    <TextView
                        android:id="@+id/temperature_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/temp_text"
                        android:textColor="#3DC2AD"
                        android:textSize="22sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/card_background"
                        android:padding="25dp"
                        android:src="@drawable/hum_icon"
                        app:tint="#fff"
                        android:contentDescription="@string/hum_image" />

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/hum_text"
                        android:textColor="#3DC2AD"
                        android:textSize="22sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="refreshSensorData"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                tools:ignore="NestedWeights,UsingOnClickInXml">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/card_background"
                        android:padding="25dp"
                        android:src="@drawable/refresh_icon"
                        app:tint="#fff"
                        android:contentDescription="@string/refresh_image" />

                    <TextView
                        android:id="@+id/refresh_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/refresh_text"
                        android:textColor="#3DC2AD"
                        android:textSize="22sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>